AdminController tests passed.